# Robotteknologi-4.-semester

./: CubeFirmware.params  README.md  UsefullRosCommands.txt  tempCodeRunnerFile.python  tester.drawio
3D Models/: DroneHolderFemale.stl  DroneHolderMale.stl  Holybro Propeller Guard - 16-04-25.stl
ATest/: Dockerfile
Control Calculations/: AndrésLegeplads.mw  DroneFlightSimulation.mlx  DroneSimulation.mlx  XY_Controller.mlx  XY_Controller_Cascade.mlx  XY_Controller_Cascade_Corrected.mlx  Z_Controller.mlx  Z_ControllerVariableMass.mlx
Control Modules/: BodeplotCheckForXY.mlx  Regressions_Z_Controller.mw  XY_Controller.mlx  XY_Controller_Cascade.mlx  Z_Controller.mlx
DebugParameters/: CMakeLists.txt
DrawIOFiler/: Communication.drawio  ControllerBlackbox.drawio  DataFlowDiagram.drawio  Drawio - Cascade Control System.drawio  Drawio - ViconBlackBox.drawio  Drawio - ViconDatastreamFlow.drawio  Drawio - ViconFullDatastreamFlow.drawio  Innitialisation Module.drawio  InterfaceTree.drawio  LandingSequence.drawio  System.drawio  safetyblackbox.drawio
DroneBagTest2/: metadata.yaml
DroneSimFlight/: DroneSimFlight_0.mcap  metadata.yaml
Drone_control_system/: README.md
Drone_control_system/src/drone_control/: CMakeLists.txt  package.xml
Drone_control_system/src/drone_control/include/drone_control/: drone_controller.hpp
Drone_control_system/src/drone_control/launch/: drone_control.launch.py
Drone_control_system/src/drone_control/src/: drone_controller.cpp  main.cpp
Modules/: ControlSystem.m  ControlSystemTestFromReport.mlx  DroneFlightSimulation.mlx  Regulation C++.cpp  XY_Controller.mlx
RosBags/: ConcentrateMcapFiles.py  FoxgloveP4DroneLayout.json  FunctionelleBags.xlsx  PX4Juggler.xml  TurnoffDataRange.csv  ViconTest.txt
RosBags/1806/AfterTest1806PIDALL/: AfterTest1806PIDALL_0.mcap
RosBags/1806/AfterTest1806PIDALLV4/: AfterTest1806PIDALLV4_0.mcap
RosBags/1906/1906testV10/: 1906testV10_0.mcap  metadata.yaml
RosBags/1906/1906testV14/: metadata.yaml
RosBags/1906/1906testV15/: 1906testV15_0.mcap
RosBags/1906/1906testV16/: metadata.yaml
RosBags/1906/1906testV19/: 1906testV19_0.mcap
RosBags/1906/1906testV2/: metadata.yaml
RosBags/1906/1906testV3/: metadata.yaml
RosBags/1906/1906testV5/: 1906testV5_0.mcap
RosBags/1906/1906testV6/: 1906testV6_0.mcap
RosBags/1906/1906testV9/: metadata.yaml
RosBags/1906testV8/: metadata.yaml
RosBags/2006/2006testV12/: 2006testV12_0.mcap  metadata.yaml
RosBags/2006/2006testV13/: metadata.yaml
RosBags/2006/2006testV15FULL/: metadata.yaml
RosBags/2006/2006testV16FULL/: metadata.yaml
RosBags/2006/2006testV3/: metadata.yaml
RosBags/2006/2006testV5/: 2006testV5_0.mcap  metadata.yaml
RosBags/2006/2006testV7/: metadata.yaml
RosBags/2006testV2/: metadata.yaml
RosBags/2006testV4/: metadata.yaml
RosBags/2006testV6/: 2006testV6_0.mcap
RosBags/2006testV8/: metadata.yaml
RosBags/AfterTest1806PIDALLV2/: metadata.yaml
RosBags/AfterTest1806PIDALLV4/: metadata.yaml
RosBags/AfterTest1806PIDALLV7FULL/: metadata.yaml
RosBags/AndHolder2504/: metadata.yaml
RosBags/BAGSKIDTEST/: metadata.yaml
RosBags/BAGSKIDTEST2/: metadata.yaml
RosBags/BAGSKIDTEST3/: metadata.yaml
RosBags/ControlSys0205/: metadata.yaml
RosBags/ControlSys0205v2/: metadata.yaml
RosBags/ControlTestV11005/: metadata.yaml
RosBags/ControlTestV21005/: metadata.yaml
RosBags/ControlTestV31005/: metadata.yaml
RosBags/ControlTestV41005/: metadata.yaml
RosBags/FirstTestFlight_20250415_135414/: FirstTestFlight_20250415_135414_0.mcap  metadata.yaml
RosBags/FullFreeFlight0105/: metadata.yaml
RosBags/FullTunedControlTestV20605/: metadata.yaml
RosBags/FullTunedControlYawTest0605/: metadata.yaml
RosBags/FullTunesControlTest0605/: metadata.yaml
RosBags/NEWMOTORS1005/: metadata.yaml
RosBags/PIDTEST0805/: metadata.yaml
RosBags/PIDTEST0805V2/: metadata.yaml
RosBags/PIDTEST0805V3/: metadata.yaml
RosBags/PIDTEST0805V4/: metadata.yaml
RosBags/PIDTEST0805V5/: metadata.yaml
RosBags/Test1005/: metadata.yaml
RosBags/TurnOffTest0805/: metadata.yaml
RosBags/TurnOffTest0805V2/: metadata.yaml
RosBags/TurnOffTest0805V3/: metadata.yaml
RosBags/ViconTest0605/: ViconTest0605_0.mcap  metadata.yaml
RosBags/Zbadcontrol/: metadata.yaml
Test/: Testing Results.ipynb  Untitled-1.py  Vicon Test.py
ViconUDPConnection/: Transmitter.cpp
ViconUDPConnection/TestCode/: Transmitter  Transmitter.cpp  TransmitterWin.cpp
ViconUDPConnection/ViconData/: 0  10msmillis.txt  1msmillis.txt  25msmillis.txt  DataUDP.txt  RosTopic.txt  RosTopicData1ms.txt
ViconUDPConnection/ViconUDPRecieverAndRosPublisherCpp/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ViconUDPConnection/ViconUDPRecieverAndRosPublisherCpp/log/: latest_build  latest_list
ViconUDPConnection/ViconUDPTransmitterPython/: ViconUDPJsonSender.py
ViconUdpConnection/: Resiever  Resiever.cpp  Transmitter  Transmitter.cpp  TransmitterWin.cpp  ViconUDPJsonSender.py
ViconUdpConnection/install/: local_setup.sh  setup.bash
ViconUdpConnection/log/: latest_build  latest_list
gazebo/: CMakeLists.txt  package.xml
gazebo/drone/launch/: drone_launch.py
gazebo/drone/model/: drone.urdf
gazebo/model/: drone.config  drone.sdf  drone.urdf
gazebo/src/: CMakeLists.txt
gazebo/src/drone/launch/: .drone_launch.py.swp  drone_launch.py
gazebo/src/drone/model/: model.config
gazebo/src/drone/worlds/: world_drone.world
gazebo/src/launch/: gazebo_launch.py
gazebo/src/plugins/: gazebo_plugin.cpp
gazebo/src/worlds/: world_drone.world
ws_drone_control/src/: main.cpp
ws_drone_control/src/drone_software/: CMakeLists.txt  package.xml
ws_drone_control/src/drone_software/msg/: DebugVariables.msg
ws_drone_control/src/drone_software/src/: controller.cpp  controller.hpp  initialize.cpp  initialize.hpp  main.cpp  motor_output_reader.cpp  offboard_mode.cpp
wsa/src/testws/: CMakeLists.txt  package.xml
wsa/src/testws/include/: initialize.hpp  offboard_control.hpp
wsa/src/testws/src/: gui.cpp  initialize.cpp  main.cpp  offboard_control.cpp
(+49 files in other folders)
