<?xml version="1.0"?>
<package format="3">
  <name>drone_gazebo</name>
  <version>0.1.0</version>
  <description>A ROS2 package for simulating a drone in Gazebo.</description>
  <maintainer email="es-25-rob-4-461@student.aau.dk">GRP461</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
