<!-- filepath: c:\Users\Mads\OneDrive\Dokumenter\GitHub\Robotteknologi-4.-semester\Drone_control_system\src\drone_control\package.xml -->
<package format="2">
  <name>drone_control</name>
  <version>0.1.0</version>
  <description>An autonomous drone control system that subscribes to position, orientation, and speed topics.</description>
  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>