<?xml version="1.0"?>
<package format="2">
  <name>drone_software</name>
  <version>0.1.0</version>
  <description>Drone control software for offboard mode</description>

  <maintainer email="es-25-rob-4-461@student.aau.dk">GRP461</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>